...
    @Json(name = "id") val id: Long,
    @Json(name = "name") val name: String,
    @Json(name = "full_name") val fullName: String,
    @Json(name = "private") val isPrivate: Boolean,
    @Json(name = "owner") val owner: RepoOwnerDto,
    @Json(name = "description") val description: String?,
    @Json(name = "default_branch") val defaultBranch: String = "main",
    @Json(name = "updated_at") val updatedAt: String?,
    @Json(name = "size") val size: Long = 0L
)

@JsonClass(generateAdapter = true)
data class BranchCommitDto(
...
